# OSAL

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  app_main.c  main.c
cmake/toolchains/: arm-gcc.cmake
core/: CMakeLists.txt
core/include/osal/: osal.h
core/include/pal/: pal_clock.h  pal_flash.h  pal_gpio.h  pal_i2c.h  pal_spi.h  pal_uart.h
include/: stm32f1xx_hal_conf.h
include/config/: board.h
include/pal/: pal_clock.h  pal_flash.h  pal_gpio.h  pal_uart.h
modules/: CMakeLists.txt
modules/blink/: blink.c  blink.h
modules/camera/: CMakeLists.txt
modules/camera/drivers/ov2640/: ov2640.c
modules/camera/drivers/ov7670/: ov7670.c
modules/camera/include/camera/: camera.h
modules/camera/src/: camera_core.c
modules/ethernet/: CMakeLists.txt
modules/ethernet/drivers/enc28j60/: enc28j60.c
modules/ethernet/drivers/w5500/: w5500.c
modules/ethernet/include/net/: eth.h
modules/ethernet/src/: eth_core.c
modules/logging/: CMakeLists.txt
modules/logging/backends/: log_backend_api.h  log_backend_rtt.c  log_backend_uart.c
modules/logging/include/logging/: log.h
modules/logging/src/: log.c
modules/radio_subghz/: CMakeLists.txt
modules/radio_subghz/drivers/rfm69/: rfm69.c
modules/radio_subghz/drivers/sx1278/: sx1278.c
modules/radio_subghz/include/radio/: radio.h
modules/radio_subghz/src/: radio_core.c
platform/host/: CMakeLists.txt  osal_posix.c  pal_gpio_host.c  pal_i2c_host.c  pal_spi_host.c  pal_time_host.c  pal_uart_host.c
platform/stm32/: CMakeLists.txt
platform/stm32/STM32F1XX/Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
platform/stm32/common/: bsp_clock.c  osal_baremetal.c  pal_gpio_stm32.c  pal_i2c_stm32.c  pal_spi_stm32.c  pal_time_stm32.c  pal_uart_stm32.c  system_stm32f1xx.c
platform/stm32/pal/stm32f1/: pal_clock_stm32f1.c  pal_flash_stm32f1.c  pal_gpio_stm32f1.c  pal_uart_stm32f1.c
platform/stm32/pal/stm32f1xx/: pal_clock_stm32f1.c  pal_flash_stm32f1.c  pal_gpio_stm32f1.c  pal_uart_stm32f1.c
platform/stm32/startup/gcc/: startup_stm32f103xb.s
